# simple-game-utils

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
examples/: basic.rs
src/: controller.rs  error.rs  lib.rs  sound_effect.rs  timing.rs
src/prefs/: app_prefs.rs  mod.rs
src/tiles/: file.rs  ici.rs  mod.rs  tilemap.rs  tileset.rs  units.rs
