[package]
name = "simple-game-utils"
version = "0.4.1"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Utilities for simple games"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/simple-game-utils"
readme = "README.md"
keywords = ["sound", "controller", "gamedev", "simple"]
categories = ["game-development"]

[features]
default = ["sound", "prefs", "serde"]
controller = ["gilrs", "gilrs/wgi"]
serde = ["dep:serde"]
sound = ["audio-engine", "hound"]
prefs = ["dep:serde", "serde_json", "directories"]
controller_xinput = ["gilrs", "gilrs/xinput"]

[dependencies]
log = "0.4.20"
gilrs = { version = "0.10.4", optional = true, default-features = false }
serde = { version = "1.0.193", features = ["derive"], optional = true }
audio-engine = { version = "0.4.5", optional = true }
thiserror = "1.0.52"
hound = { version = "3.5.1", optional = true }
serde_json = { version = "1.0.108", optional = true }
directories = { version = "5.0.1", optional = true }