[package]
name = "simple-game-utils"
version = "0.5.2"
edition = "2021"
authors = ["Emma Britton <emmabritton@pm.me>"]
description = "Utilities for simple games"
license-file = "LICENSE"
repository = "https://github.com/emmabritton/simple-game-utils"
readme = "README.md"
keywords = ["sound", "controller", "gamedev", "simple"]
categories = ["game-development"]

[features]
default = ["sound", "prefs", "serde", "ici"]
controller = ["gilrs", "gilrs/wgi"]
serde = ["dep:serde"]
sound = ["audio-engine", "hound"]
prefs = ["dep:serde", "serde_json", "directories"]
controller_xinput = ["gilrs", "gilrs/xinput"]
ici = ["ici-files"]

[dependencies]
log = "0.4"
gilrs = { version = "0.11", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
audio-engine = { version = "0.4", optional = true }
thiserror = "1.0"
hound = { version = "3.5", optional = true }
serde_json = { version = "1.0", optional = true }
directories = { version = "5.0", optional = true }
ici-files = { version = "0.4", optional = true }

[dev-dependencies]
test-log = "0.2.16"
ron = "0.8.1"

[[example]]
name = "basic"
required-features = ["sound", "prefs", "serde", "ici", "controller"]